fix options buttons

--- a/test-app/Views/Smartphones/index.cshtml
+++ b/test-app/Views/Smartphones/index.cshtml
@@ -10,7 +10,7 @@
 <body>
     <h1 class="table_header">Смартфоны</h1>
 
-    <input class="add_row_button" value="Добавить новую запись"> <input class="delete_choosen_rows" value="Удалить отмеченные">
+    <input class="add_row_button" value="Добавить новую запись" readonly> <input class="delete_choosen_rows" value="Удалить отмеченные" readonly>
 
     <div class="table">
     </div>
