--- a/test-app/src/css/style.css
+++ b/test-app/src/css/style.css
@@ -83,15 +83,14 @@
     margin-top: -3px;
     background-color: #F5DEB3;
     outline: none;
-    pointer-events: none;
     color: #000000;
     border: 3px solid #000000;
 }
 .table_row_cell img, input{
     width: auto;
     height: 20px;
-    margin-right: 0;
-    margin-right: 5px;
+    padding-left: 5px;
+    padding-right: 10px;
     pointer-events: auto;
     display: inline-block;
 }
